# astra-code-

./: .env.example  .gitignore  ASTRA.md  README.md  jarvis.py  pyproject.toml  requirements.txt
.astra/: memory.json
astra/: __init__.py  __main__.py  cli.py  config.py  hooks.py  permissions.py  rules.py  sandbox.py  telemetry.py  ui.py  worktree.py
astra/agent/: __init__.py  context.py  controller.py  plan_mode.py  planner.py  subagent.py
astra/commands/: __init__.py  handlers.py  registry.py
astra/editor/: __init__.py  file_editor.py
astra/llm/: client.py  prompts.py
astra/mcp/: manager.py
astra/repo/: __init__.py  scanner.py
astra/session/: __init__.py  checkpoint.py  manager.py
astra/tools/: __init__.py  ask_user.py  edit_file.py  glob_search.py  grep_search.py  list_files.py  multi_edit.py  read_file.py  registry.py  run_command.py  search_code.py  web_fetch.py  web_search.py  write_file.py
